# GAMES101-Assignment

./: README.md
Assignemnt0/Transformation/: CMakeLists.txt  main.cpp
Assignment1/Rasterizer/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment2/Rasterizer/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Shading/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
Assignment4/: main.cpp
Assignment5/RayTracing-Intersect/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
Assignment6/Accelerate/: BVH.cpp  BVH.hpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp  Vector.hpp
Assignment7/RayTracing-PathTracing/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
